--- a/styles/_player.styl
+++ b/styles/_player.styl
@@ -101,7 +101,7 @@
       label
         border-top 1px solid yellow
     label
-      border-top 1px solid green
+
       &:hover
         & ~ label
           border-top 1px solid black
@@ -109,7 +109,7 @@
       width 100%
       margin 0
     input ~ label
-      background green
+      background orange
       border-right 2px solid black
       display inline-block
       width 8px
@@ -117,7 +117,7 @@
     input:checked ~ label
       background grey
     input:checked + label
-      background green
+      background orange
 
 .progress
   background lighten(#000,5%)
