--- a/styles/_type.styl
+++ b/styles/_type.styl
@@ -1,11 +1,12 @@
-@font-face
-  font-family: '💪'
-  src:  url('/static/fonts/Radnika-Bold.woff2') format('woff2'),
-        url('/static/fonts/Radnika-Bold.woff') format('woff')
+@font-face {
+  font-family: 'Montserrat', sans-serif;
+  src:  url('https://fonts.googleapis.com/css?family=Montserrat:400,700') format('woff2'),
+        url('https://fonts.googleapis.com/css?family=Montserrat:400,700') format('woff')
+}
 
 h1,h2,h3,h4,h5,h6
-  font-family '💪'
-  font-weight 100
+  font-family 'Montserrat'
+  font-weight 400
 
 @font-face {
   font-family: 'rad';
@@ -28,9 +29,15 @@ a
   text-decoration none
 
 .tagline
-  font-size 2.5rem
-  margin 0
+  font-family 'Montserrat'
+  font-weight font-weight-bold
+  font-size 7.5rem
+  line-height 9rem
+  color black
+  margin 0 0 0 4rem
   @media (max-width: 1000px)
     text-align center
   @media (max-width: 800px)
-    font-size 1.5rem
+    font-size 4.5rem
+    line-height 5rem
+    margin 2rem 0 3rem
