--- a/styles/_variables.styl
+++ b/styles/_variables.styl
@@ -7,6 +7,9 @@ gray2 = grey2 // 🇨🇦
 lightgrey = #f9f9f9
 lightgray = lightgrey
 green = #03fff3
+orange = #F8AB08
+
+font-weight-bold = 700
 
 
-grad = linear-gradient(30deg, #d2ff52 0%, green 100%);
+grad = linear-gradient(0deg, rgba(248,171,8,1) 0%, rgba(255,234,190,1) 100%);
