--- a/styles/_header.styl
+++ b/styles/_header.styl
@@ -23,3 +23,13 @@
       margin-left -2rem
 .title
   position relative
+iframe
+  width 100%
+  height 180px
+  scrolling no
+  frameborder no
+  a
+   color #1a1a1a
+   text-align left
+   font-family Helvetica, sans-serif
+   font-size 11px
